# lite_os

./: .gdb_history  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SMP_IMPLEMENTATION_SUMMARY.md  TODO.md  create_fs.py  rust-toolchain.toml  virt-riscv64.dtb  virt-riscv64.dts
bootloader/: Cargo.toml  linker.ld
bootloader/.cargo/: config.toml
bootloader/src/: aclint.rs  clint.rs  console.rs  constants.rs  dbcn.rs  device_tree.rs  hart.rs  hart_csr_utils.rs  main.rs  qemu_test.rs  rfence.rs  riscv_spec.rs  trap_stack.rs  trap_vec.rs  uart16550.rs
bootloader/src/fast_trap/: entire.rs  fast.rs  mod.rs
bootloader/src/hsm_cell/: mod.rs
kernel/: Cargo.toml  Makefile  build.rs  linker.ld  update_symbols.sh
kernel/.cargo/: config.toml
kernel/linkers/: aarch64.ld  riscv64.ld
kernel/src/: config.rs  console.rs  debug.rs  drm.rs  entry.asm  entry.rs  fallible_tree.rs  id.rs  input.rs  ipc.rs  lang_item.rs  lang_items.rs  link_app.S  loader.rs  log.rs  main.rs  random.rs  socket.rs  system.rs  timer.rs  watchdog.rs
kernel/src/arch/: mod.rs
kernel/src/board/: dtb.rs  mod.rs
kernel/src/cpu/: deferred.rs  mod.rs
kernel/src/drivers/: block.rs  device_manager.rs  display.rs  framebuffer.rs  goldfish_rtc.rs  input.rs  io_completion.rs  mod.rs  network.rs  platform.rs  uart.rs  virtio_blk.rs  virtio_completion_irq.rs  virtio_console.rs  virtio_gpu.rs  virtio_input.rs  virtio_mmio.rs  virtio_net.rs  virtio_queue.rs  virtio_rng.rs
kernel/src/drm/: device.rs  event.rs  master.rs  mode.rs  publication.rs  publication_order.rs
kernel/src/fallible_tree/: iter.rs  test_support.rs  topology.rs
kernel/src/fs/: devfs.rs  devpts.rs  directory.rs  epoll.rs  ext2.rs  fat32.rs  file.rs  flock.rs  inode.rs  mod.rs  page_cache.rs  permission.rs  procfs.rs  pty.rs  readiness.rs  sysfs.rs  vfs.rs
kernel/src/graphics/: animation.rs  font.rs  geometry.rs  mod.rs  primitives.rs
kernel/src/input/: client_queue.rs
kernel/src/ipc/: eventfd.rs  mod.rs  pipe.rs  receive_buffer.rs  unix_socket.rs
kernel/src/memory/: address.rs  config.rs  device_backing.rs  dynamic_linker.rs  executable.rs  frame_allocator.rs  heap_allocator.rs  kernel_stack.rs  mm.rs  mod.rs  page_table.rs  permissions.rs  retire.rs  shared_file.rs  slab_allocator.rs  thread_safe.rs
kernel/src/platform/: mod.rs
kernel/src/process/: mod.rs  pcb.rs
kernel/src/signal/: core.rs  delivery.rs  mod.rs  multicore.rs  multicore_signal.rs  signal.rs  signal_delivery.rs  signal_manager.rs  signal_state.rs  state.rs  task_state_manager.rs
kernel/src/smp/: boot.rs  cpu.rs  ipi.rs  mod.rs  topology.rs
kernel/src/socket/: device.rs  device_error.rs  inet.rs  kobject.rs  message_limits.rs  observation.rs  options.rs  packet.rs  rights.rs  send.rs  unix.rs
kernel/src/sync/: barrier.rs  mod.rs  rwlock.rs  spinlock.rs  task_mutex.rs  wait_completion.rs
kernel/src/syscall/: clone_errno.rs  credentials.rs  drm.rs  dynamic_linking.rs  epoll.rs  errno.rs  eventfd.rs  fs.rs  futex.rs  getrandom_flags.rs  graphics.rs  input.rs  ioctl.rs  membarrier.rs  memory.rs  mmap_flags.rs  mod.rs  poll.rs  process.rs  process_control.rs  random.rs  reboot.rs  resource_limit.rs  riscv_hwprobe.rs  scheduler.rs  signal.rs  socket.rs  system_identity.rs  system_info.rs  thread.rs  timer.rs  tty.rs  user_iovec.rs  watchdog.rs
kernel/src/task/: context.rs  loader.rs  memory_barrier.rs  mod.rs  model.rs  multicore.rs  pid.rs  processor.rs  signal.rs  switch.S  task.rs  task_manager.rs  trap_context.rs
kernel/src/thread/: mod.rs  signal.rs  sync.rs  thread.rs  thread_manager.rs
kernel/src/timer/: config.rs  deadline.rs  global_timer.rs  mod.rs  rtc.rs  sleep_queue.rs  spec.rs
kernel/src/trap/: context.rs  crashdump.rs  mod.rs  softirq.rs  trap.S
user/: Cargo.toml  README.md  busybox.config  display-session-guard  dynamic-smoke-lib.c  dynamic-smoke.c  inittab  linker.ld  liteos-terminal.c  musl-smoke.c  network-service  shutdown  udhcpc.script
user/.cargo/: config.toml
user/apps/runtime/: app-runtime.mjs
user/base/: busybox.config  graphical-session  group  inittab  liteos.terminfo  network-service  passwd  startmenu.conf  udhcpc.script
user/compositor/: Cargo.toml
user/compositor/src/: boot.rs  cursor.rs  input.rs  lib.rs  scanout.rs  session.rs
user/console-session/: Cargo.toml
user/console-session/src/: display.rs  ffi.rs  lib.rs  reactor.rs
user/desktop/: Cargo.toml
user/desktop/src/: atlas.rs  chrome.rs  clients.rs  compositor.rs  cursor.rs  ffi.rs  input.rs  lib.rs  pointer.rs  scanout.rs  server.rs  shutdown.rs  sprites.rs  startmenu.rs  supervisor.rs  taskbar.rs  uifont.rs  wallpaper.rs  window.rs
user/diagnostics/: liteos-stress.c
user/display-client/: Cargo.toml
user/display-client/src/: ffi.rs  lib.rs  seat.rs
user/display-proto/: Cargo.toml
user/display-proto/src/: buffer.rs  codec.rs  geometry.rs  handshake.rs  input.rs  lib.rs  lifecycle.rs  message.rs  scene.rs  surface.rs  transport.rs
user/display-proto/tests/: protocol.rs
user/display-session/: Cargo.toml
user/display-session/src/: broker.rs  client.rs  ffi.rs  lib.rs  peer.rs  protocol.rs
user/linux-uapi/: Cargo.toml
user/linux-uapi/src/: drm.rs  input.rs  lib.rs  process.rs  pty.rs  raw.rs  unix.rs
user/lite-ui/: Cargo.toml
user/lite-ui/src/: display.rs  font.rs  host.rs  main.rs  renderer.rs  style.rs  terminal.rs  terminal_font.rs  tree.rs
user/liteos-2d/: Cargo.toml
user/liteos-terminal/: Cargo.toml
user/liteui-compositor/: Cargo.toml
user/liteui-core/: Cargo.toml
user/liteui-host/: Cargo.toml
user/liteui-session/: Cargo.toml
user/quickjs-runtime/: Cargo.toml  build.rs
user/service-activation/: Cargo.toml
user/splash/: Cargo.toml
user/src/: console.rs  gfx.rs  heap.rs  lang_item.rs  lib.rs  litegui.rs  protocol.rs  syscall.rs  testutil.rs
user/terminal/: Cargo.toml
user/terminal-service/: Cargo.toml
user/terminal-session/: Cargo.toml
wasm_programs/: Cargo.toml  build.sh
wasm_programs/.cargo/: config.toml
wasm_programs/src/: file_test.rs  hello_wasm.rs  math_test.rs  wasi_test.rs
(+742 files in other folders)
