[workspace]
members = [
    "kernel",
    "syscall-abi",
    "tools/architecture-check",
    "tools/kernel-unit",
    "tools/scheduler-unit",
]
exclude = ["bootloader", "user/console-session"]
default-members = ["kernel"]
resolver = "3"

[profile.release]
panic = "abort"
opt-level = "s"
lto = "fat"

[profile.dev]
panic = "abort"
opt-level = "s"
debug-assertions = true
