[workspace]
members = [
    "kernel",
    "syscall-abi",
    "tools/architecture-check",
    "tools/architecture-bench",
    "tools/kernel-unit",
    "tools/scheduler-unit",
]
exclude = ["bootloader", "user/console-session"]
default-members = ["kernel"]
resolver = "3"

[profile.release]
panic = "abort"
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
panic = "abort"
opt-level = "s"
debug-assertions = true
