[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
riscv = "0.14.0"
spin = "0.10.0"
dtb-walker = "=0.2.0-alpha.3"
buddy_system_allocator = "0.11.0"
bitflags = "2.9.1"
xmas-elf = "0.10.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
elfloader = { version = "0.16.0", default-features = false }
