[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
spin = "0.10.0"
dtb-walker = "=0.2.0-alpha.3"
bitflags = "2.9.1"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
syscall-abi = { path = "../syscall-abi" }
smoltcp = { version = "=0.13.1", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "socket-raw", "socket-tcp", "socket-tcp-reno", "socket-udp"] }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.14.0"
