[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
spin = { version = "0.10.0", default-features = false, features = ["mutex", "once", "spin_mutex"] }
dtb-walker = "=0.2.0-alpha.3"
bitflags = "2.9.1"
syscall-abi = { path = "../syscall-abi" }
smoltcp = { version = "=0.13.1", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "socket-raw", "socket-tcp", "socket-tcp-reno", "socket-udp"] }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.14.0"
