[package]
name = "user"
version = "0.1.0"
edition = "2024"

[dependencies]
ttf-parser = { version = "0.20", default-features = false }
libm = { version = "0.2", default-features = false }
miniz_oxide = { version = "0.7", default-features = false, features = ["with-alloc"] }


[lib]
name = "user_lib"

[profile.release]
debug = true
