[workspace]
members = ["desktop", "display-proto", "linux-uapi", "splash", "terminal"]
resolver = "3"

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
display-proto = { path = "display-proto" }
linux-uapi = { path = "linux-uapi" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = "fat"
codegen-units = 1
