[package]
name = "test_programs"
version = "0.1.0"
edition = "2021"

[workspace]
# 空的 workspace 表表示这是一个独立项目

[[bin]]
name = "hello_wasm"
path = "src/hello_wasm.rs"

[[bin]]
name = "wasi_test"
path = "src/wasi_test.rs"

[[bin]]
name = "math_test"
path = "src/math_test.rs"

[[bin]]
name = "file_test"
path = "src/file_test.rs"

[dependencies]

[profile.release]
opt-level = "s"  # Optimize for size
lto = true
codegen-units = 1
panic = "abort"

# 针对 WASM 编译的配置
[profile.wasm]
inherits = "release"
opt-level = "z"  # 更激进的大小优化